fixed overflow

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,5 +7,5 @@ h1 {
     border-bottom: 2px solid white;
 }
 p {
-    margin-top: 0.35rem;
+    margin-top: 0.25rem;
 }
